HackerRank accepted solution as given in algo_libraries.cpp.

--- a/Algorithms/Roads_and_Libraries/Makefile
+++ b/Algorithms/Roads_and_Libraries/Makefile
@@ -1,9 +1,10 @@
 algo_libraries.exe: algo_libraries.o
 	g++ -Wall -Werror algo_libraries.o -o algo_libraries.exe 
 	./algo_libraries.exe < test.txt
+	./algo_libraries.exe < input10.txt
 	
 algo_libraries.o: algo_libraries.cpp
-	g++ -Wall -Werror -c algo_libraries.cpp
+	g++ -g -Wall -Werror -c algo_libraries.cpp
 	
 clean:
 	rm *.o *.exe
